/*
 * $Id: ChangeLog,v 1.407 2002/09/28 05:17:07 horacioroldan Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-09-28 09:00 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/vm/itemapi.c
    * Fixed GPF when NaN values were converted to string (under linux)

2002-09-28 02:10 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
        ! fixed error reported by Gianni Santamarina.

2002-09-27 22:45 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/rtl/gtwin/gtwin.c
    * New, highly optimized Windows console gt driver 
      written by Przemyslaw Czerpak <druzus@polbox.com>
          (Many Thanks Przemek)
      
  * source/rtl/gtcgi/gtcgi.c
  * source/rtl/gtcrs/gtcrs.c
  * source/rtl/gtdos/gtdos.c
  * source/rtl/gtos2/gtos2.c
  * source/rtl/gtpca/gtpca.c
  * source/rtl/gtstd/gtstd.c
    * Fixed bug in hb_gt_Box() found by Przemyslaw Czerpak (Thnx)

  * source/rtl/gtsln/gtsln.c
    * Fixed screen flushing when OutErr() was used
    * Fixed bug in hb_gt_Box() found by Przemyslaw Czerpak
    * Fixed double hb_gt_DispEnd() in hb_gt_Box() found by Przemyslaw Czerpak
    
  * config/linux/gcc.cf
    * Added support for ccache (caching compile results)
    
  * source/rtl/tbrowse.prg
    * Synched with Harbour - many fixes from Maurilio Longo

2002-09-27 08:57 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.h
   * source/rdd/dbfcdx/dbfcdx1.c
        ! changed key in-memory management.
          this fixes trimmed key problems, reported by Lorenzo Fiorini.

2002-09-27 08:56 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/hbrddntx.h
   * source/rdd/dbfntx/dbfntx1.c
        ! synched with Harbour,
        several fixes from Alexander Kresin.

2002-09-26 19:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c