@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.407 2002/09/28 05:17:07 horacioroldan Exp $
+ * $Id: ChangeLog,v 1.408 2002/09/28 06:55:04 map Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-09-28 14:00 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
+  * source/rtl/gtwin/gtwin.c
+    * FWH GPF fixes provided by Przemyslaw Czerpak <druzus@polbox.com>.
+      New, fixed version should work OK with FWH. Please note that old
+      version of gtwin could produce random GPFs because of improper
+      initialization when run with FWH. 
+      Again MANY THANKS to Przemek for his really amazing work.
 
 2002-09-28 09:00 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
   * source/vm/itemapi.c
